--- a/coc-settings.json
+++ b/coc-settings.json
@@ -95,10 +95,10 @@
   "wxss.validate": false,
 
   // explorer
-  "explorer.width": 30,
+  "explorer.width": 40,
   "explorer.file.root.template": "[icon] [git] [hidden & 1][root]",
   "explorer.icon.enableNerdfont": true,
-  "explorer.previewAction.onHover": false,
+  "explorer.previewAction.onHover": "labeling",
   "explorer.icon.enableVimDevicons": false,
   "explorer.file.showHiddenFiles": false,
   "explorer.keyMappings.global": {
@@ -118,17 +118,4 @@
 
   //coc-emoji
   "coc.source.emoji.filetypes": ["markdown"]
-
-  // lua
-  //"lua.useSumnekoLs": true,
-  //"lua.commandPath": "/home/chris/.luambenvs/neovim3/bin/lua-lsp"
-  //"lua.enable": true,
-  //"Lua.completion.enable": true,
-  //"Lua.runtime.version": "Lua 5.1",
-  //"Lua.runtime.path": ["?.lua", "?/init.lua", "?/?.lua"],
-  //"lua.version": "5.1"
-  //"lua.commandPath": "/home/chris/.vscode-insiders/extensions/sumneko.lua-1.0.5/server/bin/Linux/lua-language-server"
-
-  // TODO b:coc_suggest_disable=1 GOYO
-  // TODO add to paths.vim g:coc_node_path
 }
